worked to prevent overflow when screen width is less than 750px

--- a/recipes.css
+++ b/recipes.css
@@ -25,8 +25,22 @@ aside {
 
 #suggested-recipes {
     flex: 1;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 img {
     max-height: 60%;
 }
+
+h2 {
+    flex: 0 50px;
+    /* padding-top: 20px; */
+}
+
+/* footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+} */
